Fix title overflow.

--- a/Gizmo.Client.UI/src/scss/themes/client/components/_app-card.scss
+++ b/Gizmo.Client.UI/src/scss/themes/client/components/_app-card.scss
@@ -66,6 +66,8 @@
 
         &__details {
             padding: 0 1.6rem;
+            width: 100%;
+            overflow: hidden;
         }
 
         &__footer {
